# src/routes/userRoutes.js
@@ -1,0 +1,9 @@
+const express = require('express');
+const { getUsers } = require('../controllers/userController');
+
+const router = express.Router();
+
+// Public
+router.get('/', getUsers);
+
+module.exports = router;
